# webserver-app

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: _python-ci.yml  pr.yml  release.yml
tests/: test_main.py
